<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/clr_black"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/relativeLayout_main"
    tools:context=".ConnectionActivity" >
    
    <ImageView
        android:id="@+id/imageView_background"
        android:contentDescription="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"  />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="10sp"
        android:paddingRight="15sp"
        android:paddingLeft="15sp"
        android:paddingBottom="15sp"
        android:textSize="12pt"
        android:alpha="64"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/clr_light_grey"
        android:background="@color/clr_dark_grey" />

    <TextView
        android:id="@+id/textView_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText_password"
        android:layout_alignLeft="@+id/editText_password"
        android:text="@string/acc_pass"
        android:textSize="8pt"
        android:paddingRight="10sp"
        android:paddingLeft="10sp"
        android:textColor="@color/clr_light_grey" />
    
    <EditText
        android:id="@+id/editText_pseudo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView_password"
        android:layout_alignLeft="@+id/editText_password"
        android:layout_marginBottom="10sp"
        android:paddingRight="15sp"
        android:paddingLeft="15sp"
        android:paddingBottom="15sp"
        android:textSize="12pt"
        android:alpha="64"
        android:ems="10"
        android:inputType="textNoSuggestions"
        android:textColor="@color/clr_light_grey"
        android:background="@color/clr_dark_grey" />

    <TextView
        android:id="@+id/textView_pseudo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText_pseudo"
        android:layout_alignLeft="@+id/editText_password"
        android:text="@string/acc_nick"
        android:textSize="8pt"
        android:paddingRight="10sp"
        android:paddingLeft="10sp"
        android:textColor="@color/clr_light_grey" />

    <LinearLayout
        android:id="@+id/linearLayout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_password"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:paddingRight="15sp"
        android:paddingLeft="15sp"
        android:paddingTop="15sp"
        android:paddingBottom="15sp" >
        
        <Button
	        android:id="@+id/button_login"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.5"
	        android:text="@string/acc_login"
	        android:textColor="@color/clr_light_grey"
	        android:alpha="128" />
        
        <Button
	        android:id="@+id/button_create"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.5"
	        android:text="@string/acc_create"
	        android:textColor="@color/clr_light_grey"
	        android:alpha="128" />
        
    </LinearLayout>
</RelativeLayout>